testData/fixtures/security/extract.php
<?php

    <error descr="[EA] Please provide second parameter to clearly state intended behaviour.">extract</error> ([]);

    extract([], EXTR_OVERWRITE);